tests/core/snapshots/graphql-over-http-spec.md_47.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Unexpected GraphQL Request: EOF while parsing a string at line 1 column 13"
      }
    ]
  }
}
