tests/core/snapshots/graphql-over-http-spec.md_49.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Parameter query not present in request"
      }
    ]
  }
}
