tests/core/snapshots/graphql-over-http-spec.md_53.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/graphql-response+json"
  },
  "body": {
    "errors": [
      {
        "message": " --> 1:2\n  |\n1 | {\n  |  ^---\n  |\n  = expected selection",
        "locations": [
          {
            "line": 1,
            "column": 2
          }
        ]
      }
    ]
  }
}
