tests/core/snapshots/graphql-rename-input.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": "Hello from buzz"
    }
  }
}
