tests/core/snapshots/graphql-rename-input.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input Bar {
  bar: String!
  buzz: [Foo!]
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

input Foo {
  fizz: Bar
  foo: String!
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  foo(extra_input: Spam!, input: Bar!): String!
}

input Spam {
  identifier: ID!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
